# mine-ds

./: .gitattributes  .gitignore  A  CNAME  Generate Emulator Version.bat  Gruntfile.coffee  MCDSlog  MCDSplan  Makefile  Makefile.FAT  Makefile.Release  Mine-DS.nds  README.md  Rakefile  _config.yml  bower.json  build.bat  contact.html  devkitARM-cross.txt  dissassembly.txt  download.html  doxygenconfig  feed.xml  index.html  localize.py  meson.build  package.json  params.json  sitemap.xml  template.pnproj  template.pnps  textures.html
Backup/: convert.bat  default.txt  genBlockName.sh
DSCraft2D/: TODO.txt  TODO_for_release.txt
DSCraft2D/2D-Craft_DS/: 2D-Craft_DS.nds
DSCraft2D/DS_CRAFT/: DS_CRAFT.elf  DS_CRAFT.nds  Makefile  build.bat
MineDS/: BUGS.txt  GURU.txt  How to setup emulator FAT support.txt  Makefile  TODO.txt  TODOCoolAs.txt  TODOWolfgange.txt  TODOasdf.txt  build.bat  data.txt  doxygencreate.bat
MineDS/Backup/: sampleData.txt
MineDS/audio/: CALM.it  HAL2.it  PIG_H.it
MineDS/gfx/: mobs.grit  particles.grit
NifiLibrary/: install.bat
PicknSticks/: Makefile
Texture Compiler/: Makefile  texCompiler.cpp  texConvert.cpp
_includes/: footer.html  head.html  header.html  mobile-sidebar-target.html  navbar-entries.html  scripts.html
_layouts/: default.html
_posts/: 2015-10-10-welcome-to-jekyll.markdown
audio/: meson.build
caves/: Makefile
caves/source/: tiles.h
css/: style.css
ds2ds/: Makefile  What is This.txt
gfx/: block_small.grit  meson.build  mobs.grit  sub.grit  sub_bg.grit
homebros/: Makefile  build.bat
include/: scene.h  startscreen.h
js/: smooth.js  tracking.js
multiplayerdemo/: Colors  Protocol  What is This.txt
nitro/: meson.build  soundtrack.adpcm
source/: ADPCMProcessor.cpp  ADPCMProcessor.hpp  Background.cpp  Background.h  Block.cpp  Block.hpp  Config.cpp  Config.h  FileSystem.cpp  FileSystem.hpp  FixedPoint.cpp  FixedPoint.h  Font.cpp  Font.h  Furnace.cpp  Furnace.h  Game.cpp  Game.hpp  Graphic.cpp  GraphicsSystem.cpp  GraphicsSystem.hpp  InvBlock.cpp  InvBlock.h  MessageSystem.cpp  MessageSystem.hpp  MineDS.h  NibbleReader.hpp  Player.cpp  Player.hpp  Recipe.h  SkySystem.cpp  SkySystem.hpp  SmoothCoord.cpp  SmoothCoord.hpp  SoundSystem.cpp  SoundSystem.hpp  Texture.cpp  TitleFontSystem.cpp  TitleFontSystem.hpp  TitleGraphicsSystem.cpp  (+77 more)
source/audio/: adpcmparse.cpp  audio.h  shittywavparse.cpp
source/blockUpdaters/: AirUpdater.cpp  AirUpdater.h  CactusUpdater.cpp  CactusUpdater.h  DirtUpdater.cpp  DirtUpdater.h  DoorUpdater.cpp  DoorUpdater.h  FurnaceUpdater.cpp  FurnaceUpdater.h  GrassUpdater.cpp  GrassUpdater.h  JungleGrassUpdater.cpp  JungleGrassUpdater.h  JungleLeafUpdater.cpp  JungleLeafUpdater.h  JungleSaplingUpdater.cpp  JungleSaplingUpdater.h  LadderUpdater.cpp  LadderUpdater.h  LitFurnaceUpdater.cpp  LitFurnaceUpdater.h  MyceliumUpdater.cpp  MyceliumUpdater.h  OakLeafUpdater.cpp  OakLeafUpdater.h  OakSaplingUpdater.cpp  OakSaplingUpdater.h  RedwoodLeafUpdater.cpp  RedwoodLeafUpdater.h  SnowGrassUpdater.cpp  SnowGrassUpdater.h  SnowTopUpdater.cpp  SnowTopUpdater.h  SpruceSaplingUpdater.cpp  SpruceSaplingUpdater.h  WaterUpdater.cpp  WaterUpdater.h  air.cpp  air.h  (+42 more)
source/blockupdaters/: air.cpp  air.h  cactus.cpp  cactus.h  dirt.cpp  dirt.h  furnace.cpp  furnace.h  grass.cpp  grass.h  jungleLeaf.cpp  jungleLeaf.h  jungleSapling.cpp  jungleSapling.h  junglegrass.cpp  junglegrass.h  ladder.cpp  ladder.h  leaf.cpp  leaf.h  mycelium.cpp  mycelium.h  oakSapling.cpp  oakSapling.h  plants.cpp  plants.h  redwoodLeaf.cpp  redwoodLeaf.h  snowGrass.cpp  snowGrass.h  snowTop.cpp  snowTop.h  spruceSapling.cpp  spruceSapling.h
source/entities/: Entity.cpp  Entity.hpp  Player.cpp  Player.hpp  meson.build
source/graphics/: 3DHandler.cpp  3DHandler.h  Button.cpp  Button.h  CheckButton.cpp  CheckButton.h  Font.cpp  Font.hpp  Graphic.cpp  Graphic.hpp  Graphics.cpp  Graphics.hpp  GraphicsSystem.cpp  GraphicsSystem.hpp  MainRenderer.cpp  MainRenderer.hpp  Menu.cpp  Menu.h  SkySystem.cpp  Slider.cpp  Slider.h  SubRenderer.cpp  SubRenderer.hpp  Texture.cpp  Texture.hpp  TitleFontSystem.cpp  TitleGraphicsSystem.cpp  TitleGraphicsSystem.hpp  UI.cpp  UI.h  UIElement.cpp  UIElement.h  chestGraphics.cpp  chestGraphics.h  graphics.cpp  graphics.h  inventoryGraphics.cpp  inventoryGraphics.h  meson.build  particleHandler.cpp  (+3 more)
source/graphics/handlers/: InvGfxHandler.cpp  InvGfxHandler.h
source/graphics/interfaces/: ChestInterface.cpp  ChestInterface.h  CraftingInterface.cpp  CraftingInterface.h  DeathScreenInterface.cpp  DeathScreenInterface.h  FurnaceInterface.cpp  FurnaceInterface.h  Interface.cpp  Interface.h  InventoryInterface.cpp  InventoryInterface.h  PageInterface.cpp  PageInterface.h  interfaceHandler.cpp  interfaceHandler.h
source/interfaces/: ChestInterface.cpp  ChestInterface.h  CraftingInterface.cpp  CraftingInterface.h  FurnaceInterface.cpp  FurnaceInterface.h  Interface.h  InventoryInterface.cpp  InventoryInterface.h  PageInterface.cpp  PageInterface.h  interfaceHandler.cpp  interfaceHandler.h
source/localizations/: DE.lang  EN.lang  EO.lang  lang.compoglot  locale.cpp  locale.h
source/mobs/: AnimalMob.cpp  AnimalMob.h  BaseMob.cpp  BaseMob.h  HerobrineMob.cpp  HerobrineMob.h  ItemMob.cpp  ItemMob.h  MultiplayeMob.h  MultiplayerMob.cpp  MultiplayerMob.h  PlayerMob.cpp  PlayerMob.h  WaterMob.cpp  WaterMob.h  ZombieMob.cpp  ZombieMob.h  animalMob.cpp  animalMob.h  baseMob.cpp  baseMob.h  cowMob.cpp  cowMob.h  herobrineMob.cpp  herobrineMob.h  hurt.h  itemMob.cpp  itemMob.h  mobCollisions.cpp  mobCollisions.h  mobFunctions.cpp  mobFunctions.h  mobHandler.cpp  mobHandler.h  mobMPlayer.cpp  mobMPlayer.h  mobPlayer.cpp  mobPlayer.h  pigMob.cpp  pigMob.h  (+4 more)
source/world/: Biome.hpp  ObjectChooser.hpp  ObjectChooser.inl  SimplexNoise.cpp  SimplexNoise.hpp  State.cpp  State.hpp  World.cpp  World.h  World.hpp  WorldObject.cpp  WorldObject.h  meson.build  worldGen.cpp  worldGen.h  worldRender.cpp  worldRender.h
spleef/: Makefile  Untitled.xcf
trunk/: MCDSlog  MCDSplan
wiki/: CodingConventions.wiki  Mine_DS_Setup.wiki
(+527 files in other folders)
