
audio_files = [
	'STEP_WOOD_3.wav',
	'STEP_SNOW_4.wav',
	'STEP_GRASS_1.wav',
	'CALM.it',
	'STEP_LADDER_5.wav',
	'STEP_GRASS_4.wav',
	'DIG_SNOW_2.wav',
	'STEP_GRAVEL_3.wav',
	'DIG_GRASS_2.wav',
	'STEP_SNOW_3.wav',
	'DIG_WOOD_3.wav',
	'COW_HURT.wav',
	'DIG_SNOW_4.wav',
	'STEP_GRASS_3.wav',
	'DIG_SAND_1.wav',
	'STEP_WOOD_1.wav',
	'DIG_CLOTH_4.wav',
	'STEP_SAND_1.wav',
	'EXPLODE.wav',
	'STEP_CLOTH_2.wav',
	'STEP_GRAVEL_4.wav',
	'STEP_LADDER_1.wav',
	'DIG_GRAVEL_4.wav',
	'STEP_GRAVEL_1.wav',
	'PIG_HURT.wav',
	'STEP_STONE_4.wav',
	'STEP_GRASS_5.wav',
	'DIG_GRASS_3.wav',
	'HAL2.it',
	'STEP_CLOTH_3.wav',
	'STEP_STONE_1.wav',
	'STEP_SAND_3.wav',
	'STEP_LADDER_3.wav',
	'STEP_GRAVEL_2.wav',
	'STEP_WOOD_6.wav',
	'STEP_GRASS_2.wav',
	'STEP_STONE_6.wav',
	'SHEEP_HURT.wav',
	'STEP_SNOW_1.wav',
	'STEP_SAND_5.wav',
	'STEP_CLOTH_1.wav',
	'DIG_GRAVEL_1.wav',
	'STEP_LADDER_4.wav',
	'DIG_SAND_4.wav',
	'DIG_CLOTH_1.wav',
	'CLICK.wav',
	'DIG_CLOTH_2.wav',
	'DIG_GRAVEL_2.wav',
	'STEP_SAND_2.wav',
	'DIG_SNOW_3.wav',
	'DIG_CLOTH_3.wav',
	'DIG_GRAVEL_3.wav',
	'STEP_CLOTH_4.wav',
	'STEP_GRASS_6.wav',
	'DOOR_CLOSE.wav',
	'STEP_WOOD_5.wav',
	'DIG_WOOD_2.wav',
	'STEP_STONE_5.wav',
	'DIG_STONE_1.wav',
	'DIG_WOOD_1.wav',
	'STEP_STONE_3.wav',
	'DIG_SAND_2.wav',
	'DIG_STONE_4.wav',
	'STEP_LADDER_2.wav',
	'STEP_SNOW_2.wav',
	'PLAYER_HURT.wav',
	'DIG_SAND_3.wav',
	'ZOMBIE_HURT.wav',
	'DIG_SNOW_1.wav',
	'DIG_GRASS_1.wav',
	'STEP_WOOD_2.wav',
	'POP.wav',
	'DIG_GRASS_4.wav',
	'STEP_SAND_4.wav',
	'DIG_WOOD_4.wav',
	'STEP_WOOD_4.wav',
	'DIG_STONE_3.wav',
	'DIG_STONE_2.wav',
	'DOOR_OPEN.wav',
	'STEP_STONE_2.wav',
]

mmutil = find_program('mmutil', '/opt/devkitpro/tools/bin/mmutil')

soundbank_outputs = custom_target(
    'maxmod', input : audio_files,
    output : ['soundbank.bin', 'soundbank.h'],
    command : [mmutil, '@INPUT@', '-d', '-o@OUTPUT0@', '-h@OUTPUT1@']
)
soundbank_bin = soundbank_outputs[0]
soundbank_h = soundbank_outputs[1]

# install_data('audio/soundbank.bin', install_dir : 'nitro__TEST')
